--- a/src/Profile.css
+++ b/src/Profile.css
@@ -6,6 +6,7 @@ body{
 .main-containers{
     margin: 10rem;
     padding:0px 190px 0px 190px;
+    text-align: center;
 }
 .symbol{
     padding:50px 0px 0px;
@@ -21,6 +22,9 @@ body{
     padding:0px 700px 100px 700px;
     width: 120vw;
     text-align: left;
+}
+.foot-container{
+    text-align: center;
 }
 .service{
     display: flex;
