--- a/src/Dragarea.css
+++ b/src/Dragarea.css
@@ -32,7 +32,17 @@
 }
 .arrow-1{
     width: 30%;
+    left: 5%;
+    
 }
 .arrow-2{
     width: 30%;
+    left: 5%;
+    
+}
+.w-1{
+    left: 5%;
+}
+.w-2{
+    left: 5%;
 }
