--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 93px;
     box-shadow: inset 0px 4px 21px rgba(0,0,0,0.25);
+    background-color: white;
 }
 
 .logo {
