--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -68,11 +68,6 @@
     display: block;
 }
 
-/* .position-touch:hover .dropdown-content{
-    display: block;
-} */
-
-
 .icon-dropdown-content{
     width: 24px;
     height: 24px;
@@ -92,79 +87,79 @@
     z-index: -1;
     
 }
-.nav-burgur{
+#nav-burger-bar{
+    display: none;
+}
+.nav-burger {
+    display: none;
+}
+.mobile-menu{
     display: none;
 }
 
-/* medium Device */
-@media only screen and (max-width :1039px) {
-    .navbar-logo{
-        margin-left: 12vw;
-        
-    }
-    
-}
-/* medium Device */
-@media only screen and (max-width :991px) {
-    .navbar-logo{
-        margin-left: 0.4vw;
-    }
-}
-@media only screen and (max-width :875px) {
-    .navbar-logo{
-        margin-left: 5vw;
-        position: absolute;
-        top: 3vh;
+
+@media only screen and (max-width :1250px) {
+    .first-navbar {
+        display: none;
     }
     .last-navbar{
-        display: inline;
-    }
-    .nav-burgur{
-        display: grid;
-        margin-left: 90vw;
-        margin-top: 3vh;
-    }
-    .last-navbar ul{
-        position: relative;
-        display: inline;
-        top: 5vh;
-        
-    }
-    .last-navbar ul li a{
-        display: none;
-        width: 100vw;
-        margin-left: 0px;
-        position: relative;
-        padding-left: 0px;
-        background-color: rgba(241, 241, 241, 0.96);
-        box-shadow: 1px 1px 1px 1px rgb(212, 212, 212);
-        border-radius: 3px;
-        text-align: center;
-        border: .2px solid rgba(132, 132, 132, 0.051);
-    }
-    .dropdown{
         display: none;
     }
-    
-    
-    
-}
-@media only screen and (max-width :727px) {
-    .logo{
-        width: 99px;
-        height: 30px;
-    }
-    
-}
-@media only screen and (max-width :600px) {
-    .logo{
-        width: 99px;
-        height: 30px;
-    }
-}
-@media only screen and (max-width :300px) {
     .navbar{
-        width: 100vw;
-    }
-}
+        background-color: rgba(255, 0, 0, 0);
+        box-shadow: inset 0px 0px 0px #00000040;
 
+    }
+    #nav-burger-bar{
+        display: flex;
+        position: absolute;
+        margin-left: 5vw;
+        z-index: 999;
+    }
+    .mobile-menu {
+        display: flex;
+        background-color: rgb(255, 250, 250);
+        position: absolute;
+        top: 0px; 
+        padding-top: 10vh;
+        left: 0;
+        width: 90vw; 
+        height: 100vh;
+        box-shadow: 0px 4px 21px #00000040;
+        z-index: 99;
+        
+      }
+      
+      .mobile-menu ul {
+        list-style: none;
+        padding: 0;
+      }
+      
+      .mobile-menu li {
+        margin-left: 10vw;
+        font-size: 20px;
+      }
+      .Block-for-project{
+        background-color: green;
+        height: 30vh;
+        width: 70vw;
+        overflow-x: scroll;
+      }
+      .ground-setting-1 , .ground-setting-2 , .ground-setting-3{
+        display: flex;
+        margin-left: 15vw;
+        margin-top: 2vh;
+      }
+      .ground-setting-1 p , .ground-setting-2 p ,.ground-setting-3 p {
+        font-size: 22px;
+        padding-left: 13vw;
+      }
+      #other-discript {
+        font-size: 21px;
+        margin-left: 10vw;
+        margin-top: 2vh;
+        background-color: #e9e9e962;
+        border-radius: 8px;
+      }
+      
+}
