--- a/src/pages/ChoosePage.css
+++ b/src/pages/ChoosePage.css
@@ -5,6 +5,10 @@
     margin-top: 1vh;
     display: flex;
 }
+.ChoosePageNew {
+    width: 100vw;
+    overflow-x: hidden;
+}
 .line-lefttop hr{
     position: relative;
     bottom: 4vh;
@@ -141,3 +145,27 @@
     margin-top: 1%;
     margin-left: 7%;
 }
+.btn-all-in{
+    margin-left: 2vw;
+}
+@media only screen and (max-width :880px ) {
+    .ChoosePageNew{
+        display: none;
+    }
+    
+}   
+/* macbook */
+@media only screen and (max-width :1440px ) {
+    
+    .button-sort-line{
+        position: relative;
+        right: 50px;
+    }
+    .Icon-Sec{
+        position: absolute;
+        margin-left: 32vw;
+    }
+    body {
+        overflow-x: hidden;
+    }
+}   
