--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -140,7 +140,6 @@
         font-size: 20px;
       }
       .Block-for-project{
-        background-color: green;
         height: 30vh;
         width: 70vw;
         overflow-x: scroll;
@@ -154,7 +153,7 @@
         font-size: 22px;
         padding-left: 13vw;
       }
-      #other-discript {
+      .other-discript {
         font-size: 21px;
         margin-left: 10vw;
         margin-top: 2vh;
@@ -162,4 +161,130 @@
         border-radius: 8px;
       }
       
+      .Other-out{
+        font-size: 23px;
+        margin-left: 20vw;
+        margin-top: 2vh;
+        border-radius: 8px;
+      }
+      .Other-out li{
+        margin-top: 2vh;
+      }
+      .Other-out a {
+        color: inherit;
+        text-decoration: inherit;
+        cursor: inherit;
+        font-size: 20px;
+      }
+      #All-project-nav{
+        font-size: 22px;
+        margin-left: 10vw;
+      }
+      
+      .mobile-menu {
+        animation: slideIn 0.5s ease-in-out;
+    }
+
+    /* Define the slide-in animation */
+    @keyframes slideIn {
+        0% {
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+    
+
+    .ground-setting-1, .ground-setting-2, .ground-setting-3 , .Other-out li {
+        animation: fadeIn 0.9s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+      
+}
+ /*  678 480 เเละ 380 */
+@media only screen and (max-width :480px) {
+    .Other-out a {
+        font-size: 18px;
+      }
+      #All-project-nav{
+        font-size: 20px;
+      }
+      .ground-setting-1 p , .ground-setting-2 p ,.ground-setting-3 p {
+        font-size: 20px;
+      }
+      .other-discript {
+        font-size: 19px;
+      }
+      .Other-out{
+        font-size: 21px;
+      }
+      .mobile-menu li {
+        font-size: 18px;    
+      }
+      
+}
+@media only screen and (max-width :400px) {
+    .Other-out a {
+        font-size: 14px;
+      }
+      #All-project-nav{
+        font-size: 16px;
+      }
+      .ground-setting-1 p , .ground-setting-2 p ,.ground-setting-3 p {
+        font-size: 14px;
+      }
+      .other-discript {
+        font-size: 15px;
+      }
+      .Other-out{
+        font-size: 16px;
+      }
+      .mobile-menu li {
+        font-size: 14px;    
+      }
+      .mobile-menu {
+        height: 100vh;
+      }
+      .other-discript {
+        margin-top: 1vh;
+      }
+
+      .Other-out li{
+        margin-top: 1vh;
+
+      }
+
+      .Other-out{
+        margin-top: 1vh;
+
+      }
+
+}
+@media only screen and (max-width :800px) {
+    
+      .other-discript {
+        margin-top: 1.5vh;
+      }
+
+      .Other-out li{
+        margin-top: 1.5vh;
+
+      }
+
+      .Other-out{
+        margin-top: 1.5vh;
+
+      }
+
 }
