--- a/src/component/sidebar.css
+++ b/src/component/sidebar.css
@@ -65,3 +65,8 @@
 .ontheGround{
     padding-top: 45vh;
 }
+@media only screen and (max-width :1250px) {
+    .sidebar {
+        display: none;
+    }
+}
