--- a/src/pages/ShowArea.css
+++ b/src/pages/ShowArea.css
@@ -19,10 +19,6 @@
     width: 18%;
     height: 80vh;
 }
-.ShowArea-Container {
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
 .Progress-work{
     height: 40vh;
     overflow: scroll;
@@ -118,7 +114,86 @@
     
 }
 @media only screen and (max-width :1250px) {
-    .ShowArea-Container{
+    /* .ShowArea-Container{
         display: none;
+    } */
+    .Sidemain{
+        height: 40vh;
+        width: 100vh;
+        margin-left: 0;
+    }
+    .Side-Right{
+        position: absolute;
+        width: 100vw;
+        height: 10vh;
+        margin-left: 0;
+        margin-top: 56vw;
+    }
+    .Zonebutton{
+        width: 100vw;
+    }
+    .dp-button{
+        width: 30vw;
+        height: 4vh;
+    }
+    .text-1{
+        padding-left: 5vw;
+        
+    }
+    .Progress-work{
+        height: 20vh;
+    }
+    .text-2{
+        padding-left: 70vw;
+    }
+    .SideLine{
+        margin-top: 0;
+        height: 1vh;
+    }
+    .SideLine button {
+        width: 10vw;
+        height: 10vw;
+        margin-left: 5vw;
+    }
+}
+@media only screen and (max-width :500px) {
+    .Side-Right{
+        margin-top: 94vw;
+    }
+}
+@media only screen and (max-width :400px) {
+    .Side-Right{
+        margin-top: 74vw;
+    }
+    .SideLine button {
+        width: 9vw;
+        height: 9vw;
+        margin-left: 5vw;
+    }
+}
+
+@media only screen and (max-width :391px) {
+    .Side-Right{
+        margin-top: 93vw;
+    }
+}
+@media only screen and (min-width :600px) and (max-width:750px) {
+    .Side-Right{
+        margin-top: 73vw;
+    }
+}
+@media only screen and (max-width :376px) {
+    .Side-Right{
+        margin-top: 43vh;
+    }
+    .SideLine button {
+        width: 9vw;
+        height: 9vw;
+        margin-left: 5vw;
+    }
+}
+@media only screen and (min-width :800px) and (max-width:1250px) {
+    .Side-Right{
+        margin-top: 73vw;
     }
 }
