--- a/src/pages/PublicProjectPage.css
+++ b/src/pages/PublicProjectPage.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 70% 30%;
     width: 100vw;
-    height: 11.6vh;
+    height: 12vh;
     background-color: white;
     padding: 30px 65px 18px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -11,6 +11,7 @@
 .title-header-bar {
     display: flex;
     align-items: center;
+    margin-left: 2vw;
 }
 
 .title-header-bar > h1 {
@@ -18,7 +19,7 @@
     font-weight: 200;
     color: rgba(20, 20, 20, 0.72);
     margin: 0;
-    margin-left: 12px;
+    margin-left: 0.625vw;
 }
 
 .title-header-bar > svg {
@@ -37,11 +38,15 @@
     font-size: 16px;
     font-weight: 200;
 }
+.hearder-bar{
+    position: relative;
+    bottom: 3vh;
+}
 
 .tail-bar {
     display: flex;
     margin-left: 3.854vw;
-    margin-top: 18px;
+    margin-top: .3vh;
 }
 
 .public-project-content {
@@ -54,13 +59,18 @@
     display: flex;
     flex-wrap: wrap;
     width: 78vw;
-    height: 100vh;
+    height: 72vh;
+    overflow-y: scroll;
+    border-radius: 10px;
     min-height: 56.8vh;
     margin-left: 7.187vw;
     background-color:#fcfcfc;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
-
+.btn-back-pb{
+    margin-left: 1vw;
+    margin-bottom: 8vh;
+}
 .space-row {
     margin-left: 1.823vw;
 }
@@ -86,11 +96,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 7.135vw;
-    height: 4vh;
-    box-shadow: inset 0px 2px 0px rgba(255,255,255,0.08),
-                0px 1px 2px rgba(21,29,40,0.04);
-                
+    width: 9vw;
+    height: 6vh;
+    margin-top: 3vh;
+    box-shadow: 1px 1px 2px 2px rgb(210, 210, 210);
     border: 1px solid #DEE4ED;
     background-color: #F9FCF9;
     border-radius: 6px;
@@ -116,7 +125,7 @@
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 182px;
+    min-width: 9.479vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     margin-top: 13vh;
     z-index: 1;
@@ -124,7 +133,7 @@
 
 .dropdown-content2 a {
     color: black;
-    padding: 12px 16px;
+    padding: 0.625vw 0.833vw;
     text-decoration: none;
     display: block;
 }
