--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -115,8 +115,8 @@
     }
     #nav-burger-bar{
         display: flex;
-        position: absolute;
-        margin-left: 5vw;
+        position: relative;
+        right: 80%;
         z-index: 999;
     }
     .mobile-menu {
@@ -166,7 +166,7 @@
       
       .Other-out{
         font-size: 23px;
-        margin-left: 20vw;
+        margin-left: 0vw;
         margin-top: 2vh;
         border-radius: 8px;
       }
