--- a/src/pages/LoginRegister/LoginRegisterpage.css
+++ b/src/pages/LoginRegister/LoginRegisterpage.css
@@ -12,6 +12,23 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #f5f5f5;
 }
+.button-login,.google-login-btn{
+    transition: all 0.4s ease;
+
+}
+.end-authen a:hover , .label-content a:hover{
+    color: #0261ce;
+}
+.button-login:hover ,.google-login-btn:hover{
+transform: scale(1.02); 
+}
+.button-login:hover,.google-login-btn:hover{
+    box-shadow: 1px 1px 2px 2px rgba(245, 254, 255, 0.725);
+    border-radius: 10px;
+}
+.button-login:active,.google-login-btn:active {
+transform: scale(0.9);
+}
 
 .background {
     background-color: #F8FDFF;
