--- a/src/pages/Selection.css
+++ b/src/pages/Selection.css
@@ -18,6 +18,21 @@ body{
     background-color: white;
 }
 
+.Join-pj , .Create-pj ,.btn-in{
+    transition: all 0.4s ease;
+}
+
+.Join-pj:hover ,.Create-pj:hover ,.btn-in:hover{
+transform: scale(1.02); 
+}
+.Join-pj:hover,.Create-pj:hover,.btn-in:hover{
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.053);
+    border-radius: 5px;
+}
+.Join-pj:active,.Create-pj:active,.btn-in:active{
+transform: scale(0.9);
+}
+
 .selection-card {
     display: flex;
     flex-direction: column;
