--- a/src/pages/WelcomePage.css
+++ b/src/pages/WelcomePage.css
@@ -7,7 +7,26 @@
     max-width: 100vw;
 
 }
+.package-bar{
+    cursor: pointer;
+}
+.slide-obj , .btn-g-1 , .btn-g-2  {
+    transition: all 0.3s ease;
+  
+  }
+.slide-obj:hover  , .btn-g-1:hover , .btn-g-2:hover {
+transform: scale(1.1); 
+}
+.btn-g-1:hover , .btn-g-2:hover{
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.186);
+    border-radius: 30px;
+}
+.slide-obj:active  , .btn-g-1:active , .btn-g-2:active{
+transform: scale(0.85);
+}
 
+
+  
 .main-container{
     display: flex;
     flex-direction: column;
