--- a/src/component/chatbot.css
+++ b/src/component/chatbot.css
@@ -9,9 +9,11 @@
   color: #5E5E5E;
 }
 
+
 .chatbot-toggler {
   position: fixed;
   bottom: 30px;
+  z-index: 99;
   right: 35px;
   outline: none;
   border: none;
@@ -61,6 +63,9 @@ body.show-chatbot .chatbot-toggler span:last-child {
   box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
               0 32px 64px -48px rgba(0,0,0,0.5);
   transition: all 0.1s ease;
+}
+.All-chatbot-container{
+  z-index: 99;
 }
 body.show-chatbot .chatbot {
   opacity: 1;
