--- a/src/pages/Areadata.css
+++ b/src/pages/Areadata.css
@@ -52,33 +52,33 @@
     position: relative;
     left: 23vw;
     transform: translateY(-177%);
-    box-shadow: 0px 7px 8px -2px #a3a3a3;
+    box-shadow: 0px 7px 8px -2px #c7c7c7;
 }
 
 .nothing-2{
     position: relative;
     left: 23vw;
     transform: translateY(-177%);
-    box-shadow: 0px 7px 8px -2px #a3a3a3;}
+    box-shadow: 0px 7px 8px -2px #c1c1c1;}
 
 
 .day{
     position: relative;
     left: 25vw;
     transform: translateY(-177%);
-    box-shadow: 0px 7px 8px -2px #a3a3a3;}
+    box-shadow: 0px 7px 8px -2px #c3c3c3;}
 
 .month{
     position: relative;
     left: 29vw;
     transform: translateY(-177%);
-    box-shadow: 0px 7px 8px -2px #a3a3a3;}
+    box-shadow: 0px 7px 8px -2px #bebebe;}
 
 .year{
     position: relative;
     left: 33vw;
     transform: translateY(-177%);
-    box-shadow: 0px 7px 8px -2px #a3a3a3;
+    box-shadow: 0px 7px 8px -2px #cfcfcf;
 }
 
 
@@ -94,7 +94,7 @@
     right: 36vw;
 }
 .black-btn-div-4{
-    box-shadow: 1px 1px 1px 1px #d1d1d1;
+    box-shadow: 1px 1px 1px 1px #c9c9c9;
     border-radius: 5px;
     position: relative;
     left: 75vw;
@@ -105,6 +105,16 @@
     position: relative;
     left: 78vw;
 }   
+.black-btn-div-4 , .button-state-4{
+    transition: all 0.4s ease;
+}
+
+.black-btn-div-4 :hover ,.button-state-4:hover {
+transform: scale(1.05); 
+}
+.black-btn-div-4 :active,.button-state-4:active{
+transform: scale(0.9);
+}
 .SSS-1{
     margin-right: .5rem;
     
