--- a/src/pages/CreateProject/LocatePage.css
+++ b/src/pages/CreateProject/LocatePage.css
@@ -84,7 +84,7 @@ textarea:focus, input:focus{
     width: 70%;
     margin-left: 2.4rem;
     position: relative;
-    top: 5rem;
+    top: 2rem;
     border-top: 2px solid #000000c9;
 
 }
@@ -114,7 +114,7 @@ transform: scale(0.9);
     right: 6vw;
 }
 .btn-all {
-    margin-top: 10vh;
+    margin-top: 7vh;
     margin-left: 5vw;
 }
 .btn-back-1{
@@ -127,10 +127,10 @@ mapTypeControlOptions{
     background-color: green;
 }
 .gm-style .gm-style-mtc {
-    pointer-events: auto; /* Ensure pointer events are enabled on the control */
+    pointer-events: auto; 
     height: fit-content;
-    border-radius: 12px; /* Optional: add border-radius for rounded corners */
-    margin-top: 78vh; /* Set the desired left margin */
+    border-radius: 12px; 
+    margin-top: 78vh; 
     margin-left: 1.5vw;
 }
 .gm-style .gm-style-mtc button {
