--- a/src/pages/ShowArea.css
+++ b/src/pages/ShowArea.css
@@ -7,17 +7,22 @@
     margin-left: 5.5vw;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.151);
 }
+.text-2 :hover{
+    background-color: rgb(166, 248, 189)
+  }
 .text-1{
     margin-top: 4vh;
 }
 .Container-all{
     display: flex;
+    height: 87vh;
+    z-index: 0;
 }
 .Side-Right{
     margin-left: 3vw;
     margin-top: 3%;
     width: 18%;
-    height: 80vh;
+    height: 72vh;
 }
 .Progress-work{
     height: 40vh;
@@ -97,7 +102,7 @@
     background-color: #ddd;
 }
 .SideLine{
-    margin-top: 11vh;
+    margin-top: 5vh;
     height: 100vh;
     max-height: 100px;
 }
@@ -109,9 +114,19 @@
     position: relative;
     top: 50%;
 }
+
 .ShowArea-Container{
     width: 100vw;
     
+}
+.text-2, .Tree-btn,.btn-in{
+    transition: all 0.4s ease;
+}
+.text-2:hover ,.Tree-btn:hover {
+transform: scale(1.05); 
+}
+.text-2:active,.Tree-btn:active{
+transform: scale(0.9);
 }
 @media only screen and (min-width:1250px) {
     .Container-all{
