--- a/src/pages/WelcomePage.css
+++ b/src/pages/WelcomePage.css
@@ -14,6 +14,38 @@
     transition: all 0.3s ease;
   
   }
+
+  .scene-slider {
+  width: 100%; /* กำหนดความกว้างของ slider */
+  overflow: hidden; /* ซ่อนภาพที่เกินขอบเขตของ slider */
+  white-space: nowrap; /* ให้รูปภาพอยู่ในบรรทัดเดียวกัน */
+}
+
+.scene-slider img {
+  width: 100%; /* กำหนดให้ภาพเต็มขนาดของ slider */
+  display: inline-block; /* แสดงรูปภาพในบรรทัดเดียวกัน */
+  animation: slide 16s infinite; /* ทำให้เกิด Animation slide โดยการเลื่อนภาพในระยะเวลา 6 วินาที */
+  height: 100%;
+  border-radius: 20px;
+}
+
+@keyframes slide{
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(0);
+    }
+    50%{
+        transform: translateX(-100%);
+    }
+    75%{
+        transform: translateX(-200%);
+    }
+    100%{
+        transform: translateX(-200%);
+    }
+}
 .slide-obj:hover  , .btn-g-1:hover , .btn-g-2:hover {
 transform: scale(1.1); 
 }
