--- a/src/component/choosepage/slide-box.css
+++ b/src/component/choosepage/slide-box.css
@@ -7,6 +7,9 @@
     box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.144);
     background-color: #F9FAFA;
 }
+.hidden {
+    display: none;
+  }
 .img-scroll{
     width: 17%;
     height: 16vh;
@@ -27,7 +30,6 @@
     box-shadow: 1px 1px 2px 2px rgb(236, 236, 236);
 }
 .inline-choose p {
-    background-color: red;
     width: 40vw;
     overflow-x: hidden;
     
