--- a/src/component/choosepage/box.css
+++ b/src/component/choosepage/box.css
@@ -4,7 +4,7 @@
 }
 .inside-bucket p{
     font-size: 16px;
-    background-color: #C6F8D1;
+    background-color: #c6ecf8;
     box-shadow: 1px 1px 2px 2px rgb(211, 211, 211);
     width: 14vw;
     margin-left: 1vw;
